--- a/app/renderer/assets/styles/styles.css
+++ b/app/renderer/assets/styles/styles.css
@@ -11,6 +11,24 @@ input[type=number]::-webkit-inner-spin-button {
     margin: 0;
 }
 
+.options {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 17px;
+  height: 12px;
+  background: linear-gradient( to bottom, black, black 20%, transparent 20%, transparent 40%, black 40%, black 60%, transparent 60%, transparent 80%, black 80%, black 100% );
+  opacity: 0.1;
+  padding: 12px 16px;
+  background-size: 17px 12px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+}
+
+.options:hover {
+  opacity: 0.4;
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -60,8 +78,12 @@ html, body {
   color: inherit;
 }
 
+.top input:hover {
+  border: 2px solid rgba(0,0,0,0.3);
+}
+
 .top input:focus {
-  border: 2px solid rgba(0,0,0,0.4);
+  border: 2px solid rgba(0,0,0,0.5);
 }
 
 .top img {
